[package]
name = "nctx"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.spigotmc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.3"
teloxide-macros = "0.3"

log = "0.4.8"
pretty_env_logger = "0.4.0"

futures = "0.3.13"
tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }
sqlx = {version = "0.4.1", features = ["sqlite","runtime-tokio-rustls"] }

serde = "1.0.123"
derive_more="0.99.11"